--- a/Challenge1/index.html
+++ b/Challenge1/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Challenge 1</title>
-		<link type="text/css" rel="stylesheet" href="main.css">
+		<link type="text/css" rel="stylesheet" href="styles/main.css">
 	</head>
 
 	<div class="container">
