--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link type="text/css" rel="stylesheet" href="styles/reset.css">
 		<link type="text/css" rel="stylesheet" href="styles/main.css">
 		<!--[if lt IE 7]>
-		<script src=""></script>
+		<script src=" http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
 
