--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Challenge 3</title>
+		<title>Challenge 4</title>
 		<link type="text/css" rel="stylesheet" href="styles/reset.css">
 		<link type="text/css" rel="stylesheet" href="styles/main.css">
 		<!--[if lt IE 9]>
@@ -20,5 +20,39 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim ipsum, elementum non pulvinar in, placerat sed nisi. Etiam lobortis quam sit amet nisl cursus, vitae ultrices nisl consectetur. Nunc leo urna, semper ut massa nec, interdum rutrum dui. Ut fermentum diam ut urna blandit euismod. Duis sapien mauris, dictum venenatis sem in, tempus commodo tellus. Morbi quis dolor pulvinar, adipiscing mauris non, consectetur augue. Ut est enim, convallis vel varius ac, congue a ante. Sed risus justo, suscipit non sem eget, blandit convallis metus. Proin ut aliquam felis. Suspendisse ultrices mi id lacus feugiat, ultrices lobortis ipsum eleifend. Ut condimentum enim nec massa hendrerit, in porttitor libero tincidunt.Cras vulputate dui nec nisl lobortis lobortis. Donec sodales scelerisque mollis. Sed tincidunt quam venenatis, feugiat nisi ac, lobortis mi. Ut tempor blandit commodo. Nulla at magna dictum, cursus justo non, ornare lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce enim ipsum, elementum non pulvinar in, placerat sed nisi. Etiam lobortis quam sit amet nisl cursus, vitae ultrices nisl consectetur. Nunc leo urna, semper ut massa nec, interdum rutrum dui. Ut fermentum diam ut urna blandit euismod. Duis sapien mauris, dictum venenatis sem in, tempus commodo tellus. Morbi quis dolor pulvinar, adipiscing mauris non, consectetur augue. Ut est enim, convallis vel varius ac, congue a ante. Sed risus justo, suscipit non sem eget, blandit convallis metus. Proin ut aliquam felis. Suspendisse ultrices mi id lacus feugiat, ultrices lobortis ipsum eleifend. Ut condimentum enim nec massa hendrerit, in porttitor libero tincidunt.Cras vulputate dui nec nisl lobortis lobortis. Donec sodales scelerisque mollis. Sed tincidunt quam venenatis, feugiat nisi ac, lobortis mi. Ut tempor blandit commodo. Nulla at magna dictum, cursus justo non, ornare lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</div>
-	</body>
+		<div id="imageGallery">
+			<div class="imageRow">
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+			</div>
+			<div class="imageRow">
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+			</div>
+			<div class="imageRow">
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+				</figure>
+			</div>
+		</div>
 </html>
