--- a/index.html
+++ b/index.html
@@ -24,34 +24,43 @@
 			<div class="imageRow">
 				<figure>
 					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 				<figure>
 					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 				<figure>
 					<img src="images/n5H3vgy.gif">
-				</figure>
-			</div>
-			<div class="imageRow">
-				<figure>
-					<img src="images/n5H3vgy.gif">
-				</figure>
-				<figure>
-					<img src="images/n5H3vgy.gif">
-				</figure>
-				<figure>
-					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 			</div>
 			<div class="imageRow">
 				<figure>
 					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 				<figure>
 					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 				<figure>
 					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
+				</figure>
+			</div>
+			<div class="imageRow">
+				<figure>
+					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
+				</figure>
+				<figure>
+					<img src="images/n5H3vgy.gif">
+					<figcaption>Alright already!</figcaption>
 				</figure>
 			</div>
 		</div>
