--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Challenge 1</title>
+		<title>Challenge 4</title>
+		<link type="text/css" rel="stylesheet" href="styles/reset.css">
 		<link type="text/css" rel="stylesheet" href="styles/main.css">
 		<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 	</head>
-
-	<div class="container">
-		<figure></figure>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis est sed mauris blandit blandit. Pellentesque dui est, semper sit amet laoreet quis, ultricies in nunc. Donec convallis nisi eget nisl malesuada, vel eleifend quam tincidunt. Aliquam molestie blandit velit, vel dictum nisi congue malesuada. Sed sed porta eros, vulputate ultrices urna. Vestibulum dignissim nunc elit, vitae eleifend massa dictum ut. Aliquam imperdiet eros eget iaculis auctor. Donec et felis imperdiet, suscipit turpis a, tincidunt ipsum. Maecenas quis turpis velit. Praesent porta, dui eget porta imperdiet, justo nibh dapibus nisi, quis adipiscing diam neque id justo. Morbi ullamcorper leo et.</p>
-	</div>
+	
+	<body> 
+		<div class="container">
+		</div>
+	</body>
 </html>
 
