changed index.html starter and updated README

--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Challenge 4</title>
-		<link type="text/css" rel="stylesheet" href="styles/reset.css">
-		<link type="text/css" rel="stylesheet" href="styles/main.css">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Challenge 5</title>
+		<meta charset="utf-8">
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles/reset.css">
+		<link rel="stylesheet" href="styles/main.css">
 		<!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
+		<link rel="shortcut icon" href="">
 	</head>
-	
-	<body> 
-		<div class="container">
-		</div>
+	<body>
+		<div container>
+	<!-- Place your content here -->
+
+	<!-- SCRIPTS -->
+	<!-- Example: <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+		</div container>
 	</body>
 </html>
 
