updated html5 markup

--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
 	</head>
 	<body>
 		<div container>
-	<!-- Place your content here -->
-
-	<!-- SCRIPTS -->
-	<!-- Example: <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+			<article>
+				<h1></h1>
+				<h2></h2>
+				<cite></cite>
+				<p></p>
+				<p></p>
+				<p></p>
+				<p></p>
+			</article>
+			<link></link>
+			<link></link>
 		</div container>
 	</body>
 </html>
