style updates for the 2 bottom links

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				<p>Mauris magna neque, blandit ut pellentesque vel, ultrices et eros. Ut ornare elementum diam et vulputate. Duis vestibulum ipsum a erat vulputate imperdiet. Aenean quis nisi sapien. Morbi elementum, erat ut vestibulum egestas, arcu ipsum pharetra neque, sed fringilla diam quam commodo massa. Pellentesque vel ipsum fermentum, lacinia ligula euismod, tincidunt dui. Donec quis lorem porta, viverra quam vel, fermentum sem. Fusce tincidunt auctor justo non faucibus. Integer in venenatis tellus. Donec id sodales lorem. Etiam id elementum mi. </p>
 			</article>
 			<nav>
-				<a href="#">Previous</a>
-				<a href="#">Next</a>
+				<a class="previous" href="#">Previous</a>
+				<a class="after" href="#">Next</a>
 			</nav>
 		</div class="container">
 	</body>
