--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 	<body>
 		<div class="container">
 			<article>
-				<hgroup>
+				<header>
 					<h1>TITLE OF ARTICLE</h1>
 					<cite>
 						<div class="author">AUTHOR</div>
 						<time>MM/DD/YY 00:00:00</time>
 					</cite>
-				</hgroup>
+				</header>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porttitor quam mi, vitae consectetur nisi faucibus at. Suspendisse pellentesque gravida aliquam. Pellentesque rhoncus turpis ac nisi sagittis, ac bibendum urna pretium. Nam magna velit, vulputate at commodo sed, consectetur eu quam. Maecenas nunc leo, varius ac vestibulum pellentesque, imperdiet sit amet tortor. Aenean ac egestas augue, eu lobortis enim. Curabitur felis arcu, gravida non fermentum nec, lacinia sed turpis. Vivamus tincidunt a dui tempor euismod. Cras pretium aliquet elit, imperdiet interdum diam ultrices vitae. Phasellus pharetra vel ipsum sit amet placerat. Vestibulum sit amet pharetra nibh. Morbi et tellus ut augue molestie pretium at nec velit. </p>
 				<p>Nullam a tellus vitae mauris sodales commodo. Phasellus lacinia sit amet tellus sed convallis. Nunc tincidunt leo ac nibh tincidunt, ac vehicula mauris tempor. Duis consequat lacus leo, ac sagittis odio volutpat quis. Cras ultricies sapien quis nisi rutrum, eget fringilla dolor pellentesque. Vivamus sem nulla, laoreet at metus vel, eleifend faucibus libero. Phasellus lacinia venenatis odio. Cras tempus odio est, a fringilla urna condimentum in. Morbi tellus ipsum, placerat ac ante ut, posuere varius sapien. Duis tristique dolor sed molestie lacinia. Sed a sagittis metus. Nulla ultrices tellus id risus hendrerit, non tincidunt velit aliquam. Sed aliquet augue ac nibh aliquam pharetra sit amet in elit. </p>
 				<p>Suspendisse ornare lacus in ligula consectetur, non fermentum urna viverra. Aenean posuere, erat porttitor consectetur pharetra, orci ante ultrices nulla, et blandit augue lectus nec justo. Proin aliquam leo in erat volutpat dapibus. Cras a mauris quis diam ornare placerat. Aliquam erat volutpat. Sed aliquet cursus luctus. Sed sollicitudin leo dolor, ac luctus leo tristique eget. Duis gravida diam quam, et placerat lacus adipiscing vitae. Nulla ac nisl consectetur, molestie leo ac, porttitor leo. Maecenas libero nisl, vestibulum at purus sit amet, mattis facilisis neque. Nulla non purus sit amet dolor interdum tempor. Ut vitae porttitor leo. Pellentesque sollicitudin pharetra nibh vitae sollicitudin. Nam consequat faucibus velit, id vulputate sapien dictum quis. Aenean in luctus massa. Ut nulla velit, elementum vitae lacus vel, consectetur dapibus ante. </p>
