--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<p>Suspendisse ornare lacus in ligula consectetur, non fermentum urna viverra. Aenean posuere, erat porttitor consectetur pharetra, orci ante ultrices nulla, et blandit augue lectus nec justo. Proin aliquam leo in erat volutpat dapibus. Cras a mauris quis diam ornare placerat. Aliquam erat volutpat. Sed aliquet cursus luctus. Sed sollicitudin leo dolor, ac luctus leo tristique eget. Duis gravida diam quam, et placerat lacus adipiscing vitae. Nulla ac nisl consectetur, molestie leo ac, porttitor leo. Maecenas libero nisl, vestibulum at purus sit amet, mattis facilisis neque. Nulla non purus sit amet dolor interdum tempor. Ut vitae porttitor leo. Pellentesque sollicitudin pharetra nibh vitae sollicitudin. Nam consequat faucibus velit, id vulputate sapien dictum quis. Aenean in luctus massa. Ut nulla velit, elementum vitae lacus vel, consectetur dapibus ante. </p>
 				<p>Mauris magna neque, blandit ut pellentesque vel, ultrices et eros. Ut ornare elementum diam et vulputate. Duis vestibulum ipsum a erat vulputate imperdiet. Aenean quis nisi sapien. Morbi elementum, erat ut vestibulum egestas, arcu ipsum pharetra neque, sed fringilla diam quam commodo massa. Pellentesque vel ipsum fermentum, lacinia ligula euismod, tincidunt dui. Donec quis lorem porta, viverra quam vel, fermentum sem. Fusce tincidunt auctor justo non faucibus. Integer in venenatis tellus. Donec id sodales lorem. Etiam id elementum mi. </p>
 			</article>
-			<nav>
+			<nav class="clearfix">
 				<a class="previous" href="#">Previous</a>
 				<a class="after" href="#">Next</a>
 			</nav>
