fixed closing tag

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 				<a class="previous" href="#">Previous</a>
 				<a class="after" href="#">Next</a>
 			</nav>
-		</div class="container">
+		</div>
 	</body>
 </html>
