made the dropcap happen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<p></p>
+			<p><span>L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Sed id commodo mauris, gravida condimentum magna. Donec congue neque ac augue molestie fermentum. Donec mauris lectus, volutpat ut luctus nec, bibendum eu diam. Curabitur felis nulla, aliquam eget vestibulum eu, iaculis in purus. Duis placerat justo sed elit blandit congue. Praesent cursus rutrum sapien, sodales auctor arcu consequat ac. Vivamus auctor massa sit amet nulla tincidunt, at aliquam magna porta. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In sed vehicula nunc. Integer cursus ipsum diam, auctor ornare ipsum imperdiet at. Sed scelerisque ligula mi, vel mattis.</p>
 		</div>
 	</body>
 </html>
