First rough markup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 		<link rel="shortcut icon" href="">
 	</head>
 	<body>
-		<div class="container">
-		</div>
+		<header>
+			<div class="header-content">
+				<h1>LOGO</h1>
+				<nav>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<aside></aside>
+			<div class="content"></div>
+		</main>
+		<footer>
+			<p>Copyright statements</p>
+		</footer>
 	</body>
 </html>
