additional markup and some styles updates

--- a/index.html
+++ b/index.html
@@ -15,17 +15,28 @@
 		<![endif]-->
 		<link rel="shortcut icon" href="">
 	</head>
+
 	<body>
-		<header>
+		<header class="clearfix">
 			<div class="header-content">
 				<h1>LOGO</h1>
 				<nav>
+					<a href="#">Link 1</a>
+					<a href="#">Link 2</a>
+					<a href="#">Link 3</a>
+					<a href="#">Link 4</a>
+					<a href="#">Link 5</a>
 				</nav>
 			</div>
 		</header>
 		<main>
 			<aside></aside>
-			<div class="content"></div>
+			<div class="content">
+				<article>
+					<h2></h2>
+				</article>
+				<nav class="article-nav"></nav>
+			</div>
 		</main>
 		<footer>
 			<p>Copyright statements</p>
