complete style and markup updates

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 	</head>
 
 	<body>
-		<header class="clearfix">
-			<div class="header-content">
-				<h1>LOGO</h1>
+		<header>
+			<div class="content">
 				<nav>
 					<a href="#">LINK 1</a>
 					<a href="#">LINK 2</a>
@@ -27,19 +26,11 @@
 					<a href="#">LINK 4</a>
 					<a href="#">LINK 5</a>
 				</nav>
+				<h1>LOGO</h1>
 			</div>
 		</header>
-		<main class="clearfix">
-			<aside>
-				<h2>SIDEBAR</h2>
-				<ul>
-					<li><a href="#">LINK 1</a></li>
-					<li><a href="#">LINK 2</a></li>
-					<li><a href="#">LINK 3</a></li>
-					<li><a href="#">LINK 4</a></li>
-				</ul>
-			</aside>
-			<div class="content">
+		<div class="content clearfix">
+			<main>
 				<article>
 					<h3>ARTICLE TITLE</h3>
 					<p><span>L</span>orem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porttitor quam mi, vitae consectetur nisi faucibus at. Suspendisse pellentesque gravida aliquam. Pellentesque rhoncus turpis ac nisi sagittis, ac bibendum urna pretium. Nam magna velit, vulputate at commodo sed, consectetur eu quam. Maecenas nunc leo, varius ac vestibulum pellentesque, imperdiet sit amet tortor. Aenean ac egestas augue, eu lobortis enim. Curabitur felis arcu, gravida non fermentum nec, lacinia sed turpis. Vivamus tincidunt a dui tempor euismod. Cras pretium aliquet elit, imperdiet interdum diam ultrices vitae. Phasellus pharetra vel ipsum sit amet placerat. Vestibulum sit amet pharetra nibh. Morbi et tellus ut augue molestie pretium at nec velit.</p>
@@ -50,12 +41,21 @@
 					<a class="previous" href="#">Previous</a>
 					<a class="next" href="#">Next</a>
 				</nav>
-			</div>
-		</main>
+			</main>
+			<aside>
+				<h2>SIDEBAR</h2>
+				<ul>
+					<li><a href="#">LINK 1</a></li>
+					<li><a href="#">LINK 2</a></li>
+					<li><a href="#">LINK 3</a></li>
+					<li><a href="#">LINK 4</a></li>
+				</ul>
+			</aside>
+		</div>
 		<footer>
-			<div class="footer-content clearfix">
-				<p class="clearfix">Copyright statements</p>
+			<div class="content">
 				<time>MM/DD/YY</time>
+				<p>Copyright statements</p>
 			</div>
 		</footer>
 	</body>
